--- a/core/app/views/InboundRecords/index.html
+++ b/core/app/views/InboundRecords/index.html
@@ -31,7 +31,7 @@
 
       <div class="input-prepend input-append inline">
         <span class="add-on"><i class="icon-search"></i></span>
-        <input type="text" name="p.search" placeholder="出货计划 ID Or 质检任务 Or SKU" value="${p.search}" style="width:
+        <input type="text" name="p.search" placeholder="入库记录 ID Or 质检任务 Or SKU" value="${p.search}" style="width:
         200px;">
         <button class="btn btn-primary" data-loading>搜索</button>
       </div>
@@ -53,7 +53,7 @@
               <input type="checkbox" id="inboundrecord_check_all" class="checkall">
             </label>
           </th>
-          <th>#</th>
+          <th>ID</th>
           <th>状态</th>
           <th>来源</th>
           <th>质检任务 ID</th>
@@ -66,7 +66,6 @@
           <th>创建时间</th>
           <th>完成时间</th>
           <th>备注</th>
-          <th></th>
         </tr>
       #{list items: records, as: 'r'}
         <tr>
@@ -75,6 +74,7 @@
               <input type="checkbox" name="rids" value="${r.id}" class="inboundrecord">
             </label>
           </td>
+          <td>${r.id}</td>
           <td>${r.state.label()}</td>
           <td>${r.origin.label()}</td>
           <td>@{CheckTasks.show(r.checkTask)}</td>
@@ -89,8 +89,11 @@
           </td>
           <td>
             <select name="targetWhouse">
+              <option value="">仓库</option>
                 #{list items:whouses, as:'whouse'}
-                  <option value="${whouse.id}">${whouse.name}</option>
+                  <option ${whouse.id == r.targetWhouse?.id ? 'selected' : ''} value="${whouse.id}">
+                  ${whouse.name}
+                  </option>
                 #{/list}
             </select>
           </td>
@@ -104,4 +107,15 @@
       </table>
     </div>
   </form>
+
+  <div class="row-fluid" id="order_list">
+    <div class="span12">
+    #{if records.size() == 0}
+      暂时还没有入库记录
+    #{/if}
+    #{else }
+        #{bootstrap_pager pi:p, url:'' /}
+    #{/else}
+    </div>
+  </div>
 </div>
