--- a/core/app/views/OutboundRecords/blank.html
+++ b/core/app/views/OutboundRecords/blank.html
@@ -1,7 +1,7 @@
 #{extends 'main.html' /}
 #{set title:'创建出库记录' /}
 #{set 'moreScripts'}
-    #{script_cdn name: 'inboundrecords/blank.coffee'/}
+    #{script_cdn name: 'outboundrecords/blank.coffee'/}
 #{/set}
 #{errorMsgs /}
 #{flash_alert/}
@@ -13,12 +13,11 @@
     <th>物料编码</th>
     <td>
       <input type="text" name="record.stockObj.stockObjId" value="${record.stockObj?.stockObjId}">
+      <input type="hidden" name="record.stockObj.stockObjType" value="${record.stockObj?.stockObjType}">
     </td>
 
     <th>名称</th>
-    <td>
-      <input type="hidden" name="record.stockObj.stockObjType" value="${record.stockObj?.stockObjType}">
-      <input type="text" name="stock_name" readonly="" value="${record.stockObj?.name()}">
+    <td name="stock_name" style="width: 40%;">
     </td>
   </tr>
   <tr>
@@ -26,19 +25,29 @@
     <td>
       <select name="record.whouse.id">
           #{list items:whouses, as:'whouse'}
-            <option value="${whouse.id}">${whouse.name}</option>
+            <option ${whouse.id == record.whouse?.id ? 'selected' : ''} value="${whouse.id}">
+            ${whouse.name}
+            </option>
           #{/list}
       </select>
     </td>
 
-    <th>数量</th>
+    <th>预计出库数量</th>
     <td>
-      <input type="text" name="record.qty" value="${record.qty}">
+      <input type="text" name="record.planQty" value="${record.planQty}">
+    </td>
+  </tr>
+  <tr>
+    <th>备注</th>
+    <td colspan="4">
+      <textarea name="record.memo" rows="4" class="span10">${record.memo}</textarea>
     </td>
   </tr>
   <tr>
     <td colspan="4">
+      <input type="hidden" name="record.origin" value="Other">
       <button class="btn btn-primary" name="create_record">创建</button>
+      <a href="@{OutboundRecords.index()}" class="btn btn-success">取消</a>
     </td>
   </tr>
 </table>
