--- a/core/app/views/InboundRecords/blank.html
+++ b/core/app/views/InboundRecords/blank.html
@@ -50,6 +50,9 @@
   </tr>
   <tr>
     <td colspan="4">
+      <input type="hidden" name="record.origin" value="${record.origin}">
+      <input type="hidden" name="record.state" value="${record.state}">
+
       <button class="btn btn-primary" name="create_record">创建</button>
       <a href="@{InboundRecords.index()}" class="btn btn-success">取消</a>
     </td>
