--- a/core/app/views/OutboundRecords/index.html
+++ b/core/app/views/OutboundRecords/index.html
@@ -1,4 +1,4 @@
-#{extends 'main.html'/}
+#{extends 'main_full.html'/}
 #{set title:'出库记录(' + records.size() + ')'/}
 #{set 'moreScripts'}
     #{script_cdn name: 'outboundrecords/index.coffee'/}
