*  InboundRecord blank 页面调整

--- a/core/app/views/InboundRecords/blank.html
+++ b/core/app/views/InboundRecords/blank.html
@@ -38,7 +38,7 @@
 
     <th>不良品数量</th>
     <td>
-      <input type="text" name="record.badQty" value="${record.qty}">
+      <input type="text" name="record.badQty" value="${record.badQty}">
     </td>
   </tr>
 
