--- a/core/app/views/tags/bootstrap_pager.html
+++ b/core/app/views/tags/bootstrap_pager.html
@@ -27,7 +27,7 @@ u(rl): 方法
       </a>
     </li>
     <li>
-      <a>总数据: ${_pi.count}</a>
+      <a>总数据: ${_pi.totalCount}</a>
     </li>
     <li>跳转</li>
     <select style="width:50px;">
