--- a/core/app/views/OutboundRecords/blank.html
+++ b/core/app/views/OutboundRecords/blank.html
@@ -47,6 +47,7 @@
     <td colspan="4">
       <input type="hidden" name="record.origin" value="${record.origin}">
       <input type="hidden" name="record.state" value="${record.state}">
+      <input type="hidden" name="record.type" value="${record.type}">
 
       <button class="btn btn-primary" name="create_record">创建</button>
       <a href="@{OutboundRecords.index()}" class="btn btn-success">取消</a>
