*  成品编码展示位 a 标签

--- a/core/app/views/InboundRecords/index.html
+++ b/core/app/views/InboundRecords/index.html
@@ -82,7 +82,9 @@
               @{CheckTasks.show(r.checkTask)}
             #{/if}
           </td>
-          <td><a href="${r.stockObj.showStockObjLink()}" target="_blank">${r.stockObj.stockObjId}</a></td>
+          <td>
+            <a href="${r.stockObj.showStockObjLink()}" target="_blank">${r.stockObj.stockObjId}</a>
+          </td>
           <td>${r.stockObj.name()}</td>
           <td>${r.planQty}</td>
           <td>
