*  手动校验属性(自动的 message 容易冲突)

--- a/core/app/views/OutboundRecords/blank.html
+++ b/core/app/views/OutboundRecords/blank.html
@@ -48,6 +48,7 @@
       <input type="hidden" name="record.origin" value="${record.origin}">
       <input type="hidden" name="record.state" value="${record.state}">
       <input type="hidden" name="record.type" value="${record.type}">
+      <input type="hidden" name="record.qty" value="${record.qty}">
 
       <button class="btn btn-primary" name="create_record">创建</button>
       <a href="@{OutboundRecords.index()}" class="btn btn-success">取消</a>
