*  InboundRecord 与 OutboundRecord 所有的 Enum 类型的属性字段全部存储为 String

--- a/core/app/views/OutboundRecords/index.html
+++ b/core/app/views/OutboundRecords/index.html
@@ -151,7 +151,7 @@
           <td>#{time_tooltip time: r.createDate/}</td>
           <td>#{time_tooltip time: r.outboundDate/}</td>
           <td>
-            <input type="text" name="memo" value="${r.memo}">
+            <input type="text" name="memo" value="${r.memo}" style="width: 150px;">
           </td>
         </tr>
       #{/list}
