--- a/core/app/views/OutboundRecords/index.html
+++ b/core/app/views/OutboundRecords/index.html
@@ -52,7 +52,7 @@
 
       <div class="inline">
         <a href="@{OutboundRecords.blank()}" target="_blank" class="btn btn-success inline">添加其他出库</a>
-        <a target="_blank" class="btn btn-info inline" name="confirm" data-confirm="确认出库?">确认出库</a>
+        <a target="_blank" class="btn btn-info inline" name="confirm" data-confirm="确认出库?" data-loading>确认出库</a>
       </div>
     </div>
   </form>
@@ -63,7 +63,7 @@
         <tr>
           <th>
             <label class="checkbox">
-              <input type="checkbox" id="outboundrecord_check_all" class="checkall">
+              <input type="checkbox" id="outboundrecord_check_all">
             </label>
           </th>
           <th>ID</th>
@@ -152,6 +152,7 @@
           <td>#{time_tooltip time: r.outboundDate/}</td>
           <td>
             <input type="text" name="memo" value="${r.memo}" style="width: 150px;">
+            <input type="hidden" name="state" value="${r.state.name()}">
           </td>
         </tr>
       #{/list}
