* 抽取出现在各个地方的基础的 js 与 css 的加载代码. * 替换 underscore 为 lodash. (前者已经被后者合并), 并且 API 兼容.

--- a/core/app/views/CheckTasks/showactiviti.html
+++ b/core/app/views/CheckTasks/showactiviti.html
@@ -1,26 +1,5 @@
-#{stylesheet_cdn name:'bootstrap.min.css'/}
-#{stylesheet_cdn name:'font-awesome.css'/}
-#{stylesheet_cdn name: 'jquery.loadmask.css'/}
-#{stylesheet_cdn name: 'main.css'/}
-#{stylesheet_cdn name: 'dateinput.css'/}
-#{script_cdn name: 'jquery.1.7.2.min.js'/}
-
-#{script_cdn name: 'underscore-min.js'/}
-#{script_cdn name: 'noty/jquery.noty.js'/}
-#{script_cdn name: 'noty/themes/default.js'/}
-#{script_cdn name: 'noty/layouts/top.js'/}
-#{script_cdn name: 'noty/layouts/topLeft.js'/}
-#{script_cdn name: 'noty/layouts/topRight.js'/}
-#{script_cdn name: 'rails.js'/}
-#{script_cdn name: 'jquery.animate-colors-min.js'/}
-#{script_cdn name: 'bootstrap.min.js'/}
-#{script_cdn name: 'jquery.loadmask.min.js'/}
-#{script_cdn name: 'jquery.highlight.js'/}
-#{script_cdn name: 'jquery.form.js'/}
-#{script_cdn name: 'jquery.tools.date.min.js'/}
-#{script_cdn name: 'component/notify.coffee'/}
-#{script_cdn name: 'component/popover.coffee'/}
-#{script_cdn name: 'main.js'/}
+#{render '_css_header.html' /}
+#{render '_js_header.html' /}
 #{script_cdn name: 'procureunits/blank.coffee'/}
 
 
