*  hack 了 dateinput.js 中使用的 jquery 的 api 的问题. * 将 jquery 升级到 1.12.3

--- a/core/app/views/_js_header.html
+++ b/core/app/views/_js_header.html
@@ -1,4 +1,4 @@
-#{script_cdn name:'jquery-1.7.2.min.js'/}
+#{script_cdn name:'jquery-1.12.3.min.js'/}
 #{script_cdn name: 'lodash.min.js'/}
 #{script_cdn name: 'noty/jquery.noty.js'/}
 #{script_cdn name: 'noty/themes/default.js'/}
@@ -11,8 +11,7 @@
 #{script_cdn name: 'jquery.loadmask.min.js'/}
 #{script_cdn name: 'jquery.highlight.js'/}
 #{script_cdn name: 'jquery.form.js'/}
-*{#{script_cdn name: 'bootstrap-datepicker.min.js'/}}*
-#{script_cdn name: 'jquery.tools.date.min.js'/}
+#{script_cdn name: 'dateinput.js'/}
 #{script_cdn name: 'component/notify.coffee'/}
 #{script_cdn name: 'component/popover.coffee'/}
 #{script_cdn name: 'main.js'/}
