--- a/core/app/views/StockRecords/index.html
+++ b/core/app/views/StockRecords/index.html
@@ -32,7 +32,7 @@
       </div>
 
       <div class="inline">
-        <a href="" target="_blank" class="btn btn-info inline">导出</a>
+        <a href="@{Excels.stockRecords(p)}" target="_blank" class="btn btn-info inline">导出</a>
       </div>
     </div>
   </form>
