--- a/core/app/views/header.html
+++ b/core/app/views/header.html
@@ -237,6 +237,9 @@
                   <li><a href="@{Whouses.index()}">仓库</a></li>
                 #{/power.ck}
               <li class="divider"></li>
+                #{power.ck "whouseitems.index"}
+                  <li><a href="@{WhouseItems.index()}">库存</a></li>
+                #{/power.ck}
                 #{power.ck "inboundrecords.index"}
                   <li><a href="@{InboundRecords.index()}">入库记录</a></li>
                 #{/power.ck}
