* 系统全局使用 selectize * hack selectize 控制默认的 select 元素长度.

--- a/core/app/views/_css_header.html
+++ b/core/app/views/_css_header.html
@@ -2,5 +2,6 @@
 #{stylesheet_cdn name:'bootstrapSwitch.css'/}
 #{stylesheet_cdn name:'font-awesome.css'/}
 #{stylesheet_cdn name:'jquery.loadmask.css'/}
+#{stylesheet_cdn name: 'selectize.default.css'/}
 #{stylesheet_cdn name:'dateinput.css'/}
 #{stylesheet_cdn name:'main.css'/}
