--- a/core/app/views/Shipments/index.html
+++ b/core/app/views/Shipments/index.html
@@ -38,13 +38,6 @@
       #{/list}
       </select>
 
-      <select name="p.states" class="inline" multiple="multiple" size="6">
-      #{list items:models.procure.Shipment.S.values(), as:'state'}
-        <option value="${state.name()}" ${p.states.contains(state) ? 'selected' : ''}>${state.label()}</option>
-      #{/list}
-      </select>
-
-
       <select name="p.iExpress" class="inline">
         <option value="">国际快递商</option>
       #{list items:models.procure.Shipment.Express(), as:'express'}
@@ -65,7 +58,15 @@
         <option ${p.cooperId == cooper.id ? 'selected' : ''} value="${cooper.id}">${cooper.name}</option>
       #{/list}
       </select>
-
+    </div>
+  </div>
+  <div class="row-fluid">
+    <div class="span12">
+      <select name="p.states" class="inline" multiple="multiple" size="6">
+      #{list items:models.procure.Shipment.S.values(), as:'state'}
+        <option value="${state.name()}" ${p.states.contains(state) ? 'selected' : ''}>${state.label()}</option>
+      #{/list}
+      </select>
       <div class="input-append input-prepend inline">
         <span class="add-on"><i class="icon-search"></i></span>
         <input type="text" name="p.search" value="${p.search}" placeHolder="自动识别 ID 搜索">
