--- a/core/app/views/_js_header.html
+++ b/core/app/views/_js_header.html
@@ -12,6 +12,7 @@
 #{script_cdn name: 'jquery.highlight.js'/}
 #{script_cdn name: 'jquery.form.js'/}
 #{script_cdn name: 'dateinput.js'/}
+#{script_cdn name: 'selectize.js'/}
 #{script_cdn name: 'component/notify.coffee'/}
 #{script_cdn name: 'component/popover.coffee'/}
 #{script_cdn name: 'main.js'/}
