* 将整个系统中涉及到 select 的部分全部重新调整样式. * hack selectzie,  自动计算宽度. ps: 注意, 在使用 selectize 自动计算宽度的时候, 需要注意元素本身的宽度(width 参数)不要太小, 否则会挤压变形.

--- a/core/app/views/CheckTasks/checkerList.html
+++ b/core/app/views/CheckTasks/checkerList.html
@@ -24,12 +24,13 @@
             <option ${t._1 == p.dateType ? 'selected' : ''} value="${t._1}">${t._2}</option>
           #{/list}
       </select>
+    </div>
+    <div class="input-append input-prepend inline">
       <span class="add-on">From:</span>
       <input type="date" style="width:90px;" name="p.from" value="${p.from.date()}">
       <span class="add-on" style="margin-left:20px;">To:</span>
       <input type="date" style="width:90px;" name="p.to" value="${p.to.date()}">
     </div>
-
 
     <div class="input-append input-prepend inline">
       <a class="btn btn_small" href="@{CheckTasks.checkerList(p,3)}">3天内</a>
