--- a/core/app/views/Applys/procures.html
+++ b/core/app/views/Applys/procures.html
@@ -17,16 +17,19 @@
 
     <div class="inline">
         #{select_enum name:'p.dateType', items:models.view.post.ProcreApplyPost.DateType.values(), value:p.dateType/}
-
-        #{select 'p.supplierId', items:suppliers, labelProperty:'name', valueProperty:'id', value:p.supplierId}
-            #{option ''}供应商#{/option}
-        #{/select}
+    </div>
+    <div class="inline">
+      #{select 'p.supplierId', items:suppliers, labelProperty:'name', valueProperty:'id', value:p.supplierId}
+          #{option ''}供应商#{/option}
+      #{/select}
     </div>
 
-    <select name="p.isneedPay" class="inline span1">
-      <option ${p.isneedPay==0 ? 'selected' : ''} value="0">请款开关</option>
-      <option ${p.isneedPay==1 ? 'selected' : ''} value="1">不需请款</option>
-    </select>
+    <div class="inline">
+      <select name="p.isneedPay">
+        <option ${p.isneedPay==0 ? 'selected' : ''} value="0">请款开关</option>
+        <option ${p.isneedPay==1 ? 'selected' : ''} value="1">不需请款</option>
+      </select>
+    </div>
 
     <div class="input-prepend input-append inline">
       <span class="add-on"><i class="icon-search"></i></span>
