--- a/core/app/views/Applys/transports.html
+++ b/core/app/views/Applys/transports.html
@@ -17,14 +17,17 @@
 
     <div class="inline">
         #{select_enum name:'p.dateType', items:models.view.post.TransportApplyPost.DateType.values() , value: p.dateType /}
-        #{select 'p.cooperId', items:suppliers, labelProperty:'name', valueProperty:'id' ,value: p.cooperId }
-            #{option ''}合作伙伴#{/option}
-        #{/select}
-        #{select 'p.userId', items:users, labelProperty:'username', valueProperty:'id' ,value: p.userId }
-            #{option ''}请款人#{/option}
-        #{/select}
     </div>
-
+    <div class="inline">
+      #{select 'p.cooperId', items:suppliers, labelProperty:'name', valueProperty:'id' ,value: p.cooperId }
+          #{option ''}合作伙伴#{/option}
+      #{/select}
+    </div>
+    <div class="inline">
+      #{select 'p.userId', items:users, labelProperty:'username', valueProperty:'id' ,value: p.userId }
+          #{option ''}请款人#{/option}
+      #{/select}
+    </div>
     <div class="input-prepend input-append inline">
       <span class="add-on"><i class="icon-search"></i></span>
       <input type="hidden" name="p.page" value="${p.page}">
