--- a/core/app/views/Whouses/forwards.html
+++ b/core/app/views/Whouses/forwards.html
@@ -10,14 +10,14 @@
 <div class="row-fluid">
   <form action="@{Whouses.forwards()}" method="get" class="search_form">
     <div class="span12">
-      <select name="p.cooperatorId" class="inline">
+      <select name="p.cooperatorId" class="span2">
         <option value="">货代</option>
       #{list items:cooperators, as:'c'}
         <option value="${c.id}" ${p.cooperatorId == c.id? 'selected': ''}>${c.name}</option>
       #{/list}
       </select>
 
-      <select name="p.userId" class="inline">
+      <select name="p.userId" class="span2">
         <option value="">质检员</option>
       #{list items:users, as:'user'}
         <option value="${user.id}" ${p.userId == user.id? 'selected': ''}>${user.username}</option>
@@ -26,8 +26,7 @@
 
       <input type="hidden" name="p.type" value="${p.type}">
 
-      <div class="input-append inline">
-        <span class="add-on"><i class="icon-search"></i></span>
+      <div class="input span2">
         <button class="btn">搜索</button>
       </div>
     </div>
