--- a/core/app/views/tags/select_all_month.html
+++ b/core/app/views/tags/select_all_month.html
@@ -1,4 +1,8 @@
-<select name="${_name}" id="${_id}" class="${_class ? _class : ''}" ${_disabled ? 'disabled' :''}>
+<select
+#{if _native}
+    native
+#{/if}
+    name="${_name}" id="${_id}" class="${_class ? _class : ''}" ${_disabled ? 'disabled' :''}>
 #{set month: Integer.parseInt(new Date().format("MM"))/}
 
   <option value="0" selected>月份</option>
