--- a/core/app/views/tags/select_enum.html
+++ b/core/app/views/tags/select_enum.html
@@ -2,6 +2,9 @@
 #{if _class}
     name="${_name}" class="${_class}"
 #{/if}
+#{if _native}
+    native
+#{/if}
 #{else }
     size="1" name="${_name}" class="${_class}">
 #{/else}>
