--- a/core/app/views/tags/pickCurrency.html
+++ b/core/app/views/tags/pickCurrency.html
@@ -3,7 +3,7 @@
 _name: form 表单提交的 name 属性
 _c : 选中的 Currency
 }*
-<select ${_id ? 'id=' + _id : ''} name="${_name}" class="${_class}">
+<select ${_id ? 'id=' + _id : ''} name="${_name}" class="${_class}" ${_native ? "native=" + _native : ''}>
 #{list items:helper.Currency.values(), as:'cr'}
     <option ${cr == _c ? 'selected' : ''} value="${cr}">${cr}</option>
 #{/list}
