--- a/core/app/views/Orders/_invoice.html
+++ b/core/app/views/Orders/_invoice.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:yahp="http://www.allcolor.org/xmlns/yahp">
+<html>
 <head>
   <title>Shipment Invoice</title>
   <style type="text/css">
@@ -106,13 +106,13 @@
       <div class="div1">
       #{if  (ord.market==models.market.M.AMAZON_ES || ord.market==models.market.M.AMAZON_UK ) || (ord.market==models
       .market.M.AMAZON_IT && invoice?.europevat==models.market.OrderInvoice.VAT.EUROPE)}
-        <img src="${models.OperatorConfig.getVal("elcuk2url")}/images/common/EDEER-logo.jpg"
+        <img src="${System.getenv(Constant.ROOT_URL)}/images/common/EDEER-logo.jpg"
              style="height:100%">
       #{/if}
       #{if  (ord.market==models.market.M.AMAZON_DE) || (ord.market==models
             .market.M.AMAZON_FR) ||  (ord.market==models.market.M.AMAZON_IT && (invoice==null
       || invoice.europevat!=models.market.OrderInvoice.VAT.EUROPE))}
-        <img src="${models.OperatorConfig.getVal("elcuk2url")}/images/common/TUGGLE-logo.jpg"
+        <img src="${System.getenv(Constant.ROOT_URL)}/images/common/TUGGLE-logo.jpg"
              style="height:100%">
       #{/if}
       </div>
