*  添加 native 属性到 category 选择框

--- a/core/app/views/Analyzes/index.html
+++ b/core/app/views/Analyzes/index.html
@@ -72,7 +72,7 @@
           #{option ''}Market#{/option}
       #{/select}
 
-      #{select 'p.categoryId', items:categoryIds, value: p.categoryId, class: 'inline'}
+      #{select 'p.categoryId', items:categoryIds, value: p.categoryId, class: 'inline', native: true}
           #{option ''}Category#{/option}
       #{/select}
 
