--- a/core/app/views/WhouseItems/index.html
+++ b/core/app/views/WhouseItems/index.html
@@ -31,13 +31,28 @@
   </form>
 
   <div class="span12">
-    TODO
+    <table class="table table-condensed table-bordered">
+      <tr>
+        <th>仓库名称</th>
+        <th>物料编码</th>
+        <th>名称</th>
+        <th>当前库存</th>
+        <th>操作</th>
+      </tr>
+    #{list items:items, as: 'item'}
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+    #{/list}
+    </table>
   </div>
 
   <div class="row-fluid" id="order_list">
     <div class="span12">
     #{if items.size() == 0}
-      暂时还没有库存记录
+      暂时还没有库存数据
     #{/if}
     #{else }
         #{bootstrap_pager pi:p, url:'' /}
