修改系统收货地址

--- a/core/app/views/Deliveryments/show.html
+++ b/core/app/views/Deliveryments/show.html
@@ -177,16 +177,16 @@
           <th>交货地址</th>
           <td colspan="7">
           <textarea rows="3" class="span12" name="excel.deliveryAddress" id="excel_deliveryAddress">
-            收货地址: 深圳市光明新区根玉路第七工业区汉海达高新科技园1栋6楼A区
+            收货时间：法定工作日8：30-12：00   13：30-18：00，工作日其他时间到货请提前1小时联系。
 
-            收货时间: 周一到周五 8:00—18:00 周六 08:00-17:00 (法定假日另行通知 如需周天送货，请提前一天邮件通知，并于司机出发前 30
-            分钟电话确认再发货！特殊进仓请提前一天书面知会，视情况收取加班作业费！)
+            仓库地址：深圳市光明新区玉律村汉海达科技创新园1栋A区6楼
 
-            仓库联系人:
+            电      话：0755-21383192-8060/8061
 
-            仓库座机: 0755-36931516
-            旷杰Jie 18692275630 jie@easya.cc
-            夏艳红Vivian 18098906612 vivian@easya.cc
+            收货联系人：杨上德：13724219910（保护类、蓝牙类）
+                      陈静林：15711961308（电源、充电器类、瑞能，布兰德沃）
+                      旷   杰：18692275630（仓管）
+                      方   圆：15974143832（经理）
           </textarea>
           </td>
         </tr>
