--- a/core/app/views/DeliverPlans/index.html
+++ b/core/app/views/DeliverPlans/index.html
@@ -25,7 +25,7 @@
     </div>
 
 
-    <select name="p.cooperId" id="select_cooper" placeholder="手动输入供应商" class="input-medium inline">
+    <select name="p.cooperId" class="inline">
       <option value="0">供应商</option>
         #{list items:suppliers, as:'sp'}
           <option ${sp.id == p.cooperId ? 'selected' : ''} value="${sp.id}">${sp.name}</option>
