--- a/core/app/views/Deliveryments/index.html
+++ b/core/app/views/Deliveryments/index.html
@@ -34,8 +34,8 @@
       <option value="">类型</option>
     #{/select_enum}
 
-      <select name="p.cooperId" id="select_cooper" placeholder="手动输入供应商" class="inline selectize">
-        <option value="0">供应商</option>
+      <select name="p.cooperId" class="inline">
+        <option value="">供应商</option>
       #{list items:suppliers, as:'sp'}
         <option ${sp.id == p.cooperId ? 'selected' : ''} value="${sp.id}">${sp.name}</option>
       #{/list}
