--- a/core/app/views/WhouseItems/index.html
+++ b/core/app/views/WhouseItems/index.html
@@ -25,7 +25,7 @@
       </div>
 
       <div class="inline">
-        <a href="" target="_blank" class="btn btn-info inline">导出</a>
+        <a href="@{Excels.whouseItems(p)}" target="_blank" class="btn btn-info inline">导出</a>
       </div>
     </div>
   </div>
