--- a/core/app/views/StockRecords/index.html
+++ b/core/app/views/StockRecords/index.html
@@ -67,7 +67,9 @@
         #{/list}
         </table>
       </div>
+    </div>
 
+    <div class="row-fluid">
       <div class="span12">
       #{if records.size() == 0}
         暂时还没有库存异动记录
